--- a/style.scss
+++ b/style.scss
@@ -17,7 +17,7 @@ body {
 
 .remark-slide-content {
   font-size: 100%;
-  padding: 1em 3em 1em 2em;
+  padding: 1em 2em 1em 2em;
 
   h1 {
     margin-bottom: 0;
@@ -54,7 +54,7 @@ blockquote {
     top: 50%;
     transform: translate(-50%, -50%);
     margin: 0;
-    font-size: 450%;
+    font-size: 330%;
   }
 }
 
@@ -87,12 +87,42 @@ blockquote {
 .avatar {
   @include center;
   display: block;
-  width: 50%;
+  width: 38%;
 
   img {
     width: 100%;
     height: 100%;
   }
+}
+
+.elixir-loves-erlang {
+  h1 {
+    margin-top: 30%;
+  }
+}
+
+.actor {
+  code {
+    font-size: 50%;
+  }
+}
+
+.like-cs-for-js {
+  .no {
+    font-size: 850%;
+  }
+}
+
+.funny-quote {
+  blockquote {
+    margin-top: 30%;
+  }
+}
+
+.wait {
+  text-align: center;
+  display: block;
+  font-size: 500%;
 }
 
 .metaprogramming {
@@ -101,9 +131,23 @@ blockquote {
 
   h1 {
     animation: blink 0.4s steps(2, start) infinite;
-    font-size: 500%;
-    margin-top: 40%;
+    font-size: 400%;
+    margin-top: 30%;
   }
+}
+
+.kid, .andy {
+  display: block;
+  height: 13em;
+
+  img { height: 100%; }
+}
+
+.minions {
+  display: block;
+  height: 11em;
+  margin-top: 2em;
+  img { height: 100%; }
 }
 
 @keyframes disco-flash {
