--- a/style.scss
+++ b/style.scss
@@ -43,6 +43,10 @@ blockquote {
   font-family: 'Ubuntu Mono';
 }
 
+.remark-code-line-highlighted {
+  background-color: rgba(255, 255, 255, 0.2);
+}
+
 // Singles slides ==============================================================
 
 .first-slide {
@@ -107,6 +111,10 @@ blockquote {
   }
 }
 
+.otp {
+  padding-top: 5em;
+}
+
 .like-cs-for-js {
   .no {
     font-size: 850%;
@@ -148,6 +156,10 @@ blockquote {
   height: 11em;
   margin-top: 2em;
   img { height: 100%; }
+}
+
+.demo-time {
+  padding-top: 8em;
 }
 
 @keyframes disco-flash {
