Add local fonts
Close #1

--- a/style.scss
+++ b/style.scss
@@ -1,6 +1,4 @@
-@import url(https://fonts.googleapis.com/css?family=Yanone+Kaffeesatz);
-@import url(https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic);
-@import url(https://fonts.googleapis.com/css?family=Ubuntu+Mono:400,700,400italic);
+@import "fonts/fonts.css";
 
 $light-grey: #818181;
 
