Safer fonts and some fetched dependencies

--- a/style.scss
+++ b/style.scss
@@ -29,7 +29,7 @@ body {
 }
 
 h1, h2, h3 {
-  font-family: 'Yanone Kaffeesatz';
+  font-family: 'Yanone Kaffeesatz', Helvetica;
   font-weight: normal;
 }
 
@@ -38,7 +38,7 @@ blockquote {
 }
 
 .remark-code, .remark-inline-code {
-  font-family: 'Ubuntu Mono';
+  font-family: 'Ubuntu Mono', 'Inconsolata-g for Powerline';
 }
 
 .remark-code-line-highlighted {
