--- a/style.scss
+++ b/style.scss
@@ -60,32 +60,6 @@ blockquote {
   }
 }
 
-.sips {
-  position: relative;
-
-  img {
-    display: block;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-  }
-
-  p:nth-child(1) img {
-    width: 60%;
-    transform: translate(-50%, -50%) rotate(-10deg);
-  }
-
-  p:nth-child(2) img {
-    width: 50%;
-    transform: translate(-50%, -50%) rotate(10deg);
-  }
-
-  p:nth-child(3) img {
-    width: 80%;
-    transform: translate(-50%, -50%);
-  }
-}
-
 .avatar {
   @include center;
   display: block;
@@ -95,6 +69,10 @@ blockquote {
     width: 100%;
     height: 100%;
   }
+}
+
+.questions {
+  padding-top: 7em;
 }
 
 .elixir-loves-erlang {
