--- a/style.scss
+++ b/style.scss
@@ -45,6 +45,10 @@ blockquote {
   background-color: rgba(255, 255, 255, 0.2);
 }
 
+.remark-notes, .remark-notes-preview {
+  font-size: 70%;
+}
+
 // Singles slides ==============================================================
 
 .first-slide {
